feat: support --debug

--- a/action.yaml
+++ b/action.yaml
@@ -47,6 +47,10 @@ inputs:
         description: if set, will wait until all Pods, PVCs, Services, and minimum number of Pods of a Deployment, StatefulSet, or ReplicaSet are in a ready state before marking the release as successful. It will wait for as long as timeout
         required: false
         default: ""
+    debug:
+        description: enable verbose output
+        required: false
+        default: ""
 runs:
     using: 'docker'
     image: 'Dockerfile'
@@ -63,3 +67,4 @@ runs:
         UPDATE_DEPS: ${{ inputs.update-deps }}
         INSTALL: ${{ inputs.install }}
         WAIT: ${{ inputs.wait }}
+        DEBUG: ${{ inputs.debug }}
